--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,12 +14,12 @@
 
     <div class="form-container">
       <ion-item>
-        <ion-label position="floating">Email</ion-label>
-        <ion-input></ion-input>
+        <ion-label position="floating">UserName</ion-label>
+        <ion-input [(ngModel)]= "email"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Password</ion-label>
-        <ion-input type="password"></ion-input>
+        <ion-input type="password" [(ngModel)]= "password"></ion-input>
         <ion-icon name="eye" slot="end"></ion-icon>
       </ion-item>
 
